--- a/escolha.html
+++ b/escolha.html
@@ -4,77 +4,73 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Escolha sua Surpresa</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
-    body {
+    html, body {
+      margin: 0;
+      padding: 0;
       background: #ffd6e7;
       font-family: 'Arial', sans-serif;
       text-align: center;
-      margin: 0;
-      padding: 30px 20px;
+      min-height: 100vh;
     }
 
     h1 {
       color: #c73866;
-      font-size: 2rem;
-      margin: 20px 0;
+      font-size: 2.4rem;
+      margin: 40px 0 20px;
+      font-family: 'Great Vibes', cursive;
     }
 
     .options {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      max-width: 300px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 30px;
+      padding: 0 30px;
+      max-width: 800px;
       margin: 0 auto;
     }
 
-    .option-btn {
-      background: #ffffff;
+    .card {
+      background: #fff;
       border: 2px solid #c73866;
-      border-radius: 20px;
-      padding: 20px;
-      font-size: 1.2rem;
+      border-radius: 25px;
+      padding: 40px 25px;
       color: #c73866;
+      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s, box-shadow 0.2s;
       cursor: pointer;
-      transition: all 0.3s;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      min-height: 220px;
     }
 
-    .option-btn:hover {
-      background: #f9bfd5;
-      transform: translateY(-3px);
-      box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+    .card:hover {
+      transform: translateY(-7px);
+      box-shadow: 0 10px 18px rgba(0, 0, 0, 0.15);
     }
 
-    .option-btn:active {
-      transform: translateY(0);
+    .card .icon {
+      font-size: 3rem;
+      margin-bottom: 15px;
+    }
+
+    .card h2 {
+      font-size: 1.6rem;
+      margin-bottom: 10px;
+    }
+
+    .card p {
+      font-size: 1.05rem;
+      color: #8b1e3f;
+      margin: 0;
+      line-height: 1.5;
     }
 
     .heart {
-      font-size: 3rem;
-      margin: 20px 0;
+      font-size: 3.5rem;
+      margin: 40px 0;
       animation: pulse 1.5s infinite;
     }
 
     @keyframes pulse {
       0% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-      100% { transform: scale(1); }
-    }
-  </style>
-</head>
-<body>
-  <h1>O que você gostaria de ver?</h1>
-  
-  <div class="options">
-    <button class="option-btn" onclick="window.location.href='surpresa.html'">
-      💝 Nossa Surpresa Especial
-    </button>
-    
-    <button class="option-btn" onclick="window.location.href='contador.html'">
-      📅 Nosso Tempo Juntos
-    </button>
-  </div>
-
-  <div class="heart">❤️</div>
-</body>
-</html>
+      50% { transform: scale
