--- a/escolha.html
+++ b/escolha.html
@@ -93,10 +93,10 @@
       <div class="heart">♡</div>
     </div>
 
-    <div class="card" onclick="alert('Em breve 💖')">
-      <div class="icon">🧠</div>
-      <div class="card-title">Jogo da Memória</div>
-      <div class="card-desc">Descubra pares de momentos</div>
+    <div class="card" onclick="window.location.href='surpresa.html'">
+      <div class="icon">🎵</div>
+      <div class="card-title">Playlist do Amor</div>
+      <div class="card-desc">Ouça a trilha sonora do nosso amor</div>
       <div class="heart">♡</div>
     </div>
   </div>
