--- a/escolha.html
+++ b/escolha.html
@@ -79,7 +79,7 @@
   <div class="subtitle">♡ juntos para sempre ♡</div>
 
   <div class="container">
-    <div class="card" onclick="window.location.href='surpresa.html'">
+    <div class="card" onclick="window.location.href='playlist.html'">
       <div class="icon">📷</div>
       <div class="card-title">Nossas Memórias</div>
       <div class="card-desc">Momentos preciosos com você</div>
