--- a/contador.html
+++ b/contador.html
@@ -3,49 +3,74 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Nosso Tempo Juntos</title>
+  <title>Calendário do Amor</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #ffe6f0;
-      text-align: center;
+      font-family: 'Montserrat', sans-serif;
+      background-color: #ffe4ec;
       color: #333;
-      max-width: 480px;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 20px;
+      text-align: center;
+    }
+
+    .image-top {
+      width: 100%;
+      max-height: 300px;
+      object-fit: cover;
+      border-bottom: 4px solid #c73866;
     }
 
     h1 {
-      font-size: 2rem;
-      margin-top: 20px;
-      color: #d6336c;
+      font-family: 'Great Vibes', cursive;
+      font-size: 2.5rem;
+      color: #c73866;
+      margin: 20px 0 10px;
+    }
+
+    .subtitle {
+      font-size: 1rem;
+      color: #8b1e3f;
+      margin-bottom: 25px;
     }
 
     .timer {
-      font-size: 1.5rem;
-      margin: 20px 0;
-      color: #d6336c;
+      font-size: 1.3rem;
       font-weight: bold;
+      color: #d6336c;
+      margin-bottom: 30px;
+      line-height: 1.6;
+      padding: 0 20px;
     }
 
     .milestone {
-      background: white;
-      border-radius: 15px;
-      padding: 15px;
-      margin: 15px 0;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      background: #fff;
+      border-radius: 18px;
+      padding: 20px;
+      margin: 0 auto 30px;
+      max-width: 350px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    .milestone h3 {
+      color: #c73866;
+      margin-bottom: 5px;
+    }
+
+    .milestone p {
+      margin: 0;
+      color: #8b1e3f;
     }
 
     .back-btn {
-      background: #d6336c;
+      background: #c73866;
       color: white;
       border: none;
-      border-radius: 20px;
-      padding: 10px 20px;
-      margin: 20px 0;
+      border-radius: 25px;
+      padding: 12px 25px;
+      font-size: 1rem;
+      margin-bottom: 30px;
       cursor: pointer;
       transition: background 0.3s;
     }
@@ -53,51 +78,40 @@
     .back-btn:hover {
       background: #8b1e3f;
     }
-
-    .heart {
-      font-size: 3rem;
-      animation: pulse 1.5s infinite;
-      margin: 20px 0;
-    }
-
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.3); }
-    }
   </style>
 </head>
 <body>
-  <h1>Nosso Tempo Juntos ❤️</h1>
+
+  <img src="https://i.imgur.com/aKEF1NF.jpeg" alt="Foto do casal" class="image-top" />
+
+  <h1>Calendário do Amor</h1>
+  <div class="subtitle">♡ Cada dia com você é um presente ♡</div>
 
   <div class="timer" id="timer"></div>
 
   <div class="milestone">
-    <h3>Desde o dia em que nos conhecemos</h3>
+    <h3>Início da nossa história</h3>
     <p>14 de Junho de 2023</p>
   </div>
-
-  <div class="heart">❤️</div>
 
   <button class="back-btn" onclick="window.location.href='escolha.html'">Voltar</button>
 
   <script>
     function atualizarContador() {
-      const dataInicio = new Date('2023-06-14'); // Substitua pela data do seu namoro
+      const dataInicio = new Date('2023-06-14'); // sua data real aqui
       const agora = new Date();
       const diferenca = agora - dataInicio;
-      
+
       const dias = Math.floor(diferenca / (1000 * 60 * 60 * 24));
       const horas = Math.floor((diferenca % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
       const minutos = Math.floor((diferenca % (1000 * 60 * 60)) / (1000 * 60));
-      
+
       document.getElementById('timer').innerHTML = `
-        Estamos juntos há:<br>
-        ${dias} dias, ${horas} horas e ${minutos} minutos<br>
-        E cada segundo com você é especial!
+        Já vivemos juntos:<br>
+        <strong>${dias} dias</strong>, <strong>${horas} horas</strong> e <strong>${minutos} minutos</strong> de amor 💖
       `;
     }
 
-    // Atualizar contador imediatamente e a cada minuto
     atualizarContador();
     setInterval(atualizarContador, 60000);
   </script>
