--- a/contador.html
+++ b/contador.html
@@ -17,16 +17,18 @@
 
     .image-top {
       width: 100%;
-      max-height: 300px;
+      max-height: 250px;
       object-fit: cover;
-      border-bottom: 4px solid #c73866;
+      border-radius: 0 0 15px 15px;
+      box-shadow: 0 4px 15px rgba(199, 56, 102, 0.2);
+      margin-bottom: 20px;
     }
 
     h1 {
       font-family: 'Great Vibes', cursive;
       font-size: 2.5rem;
       color: #c73866;
-      margin: 20px 0 10px;
+      margin: 10px 0;
     }
 
     .subtitle {
@@ -50,7 +52,7 @@
       padding: 20px;
       margin: 0 auto 30px;
       max-width: 350px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 12px rgba(199, 56, 102, 0.15);
     }
 
     .milestone h3 {
