--- a/surpresa.html
+++ b/surpresa.html
@@ -3,52 +3,131 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Feliz Dia dos Namorados 💖</title>
+  <title>Nossas Memórias 💕</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #ffe6f0;
-      text-align: center;
+      font-family: 'Montserrat', sans-serif;
+      background-color: #fff5f9;
       color: #333;
-      max-width: 480px;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 20px;
+      text-align: center;
+      max-width: 100%;
+      overflow-x: hidden;
+    }
+
+    .header {
+      background: linear-gradient(to right, #c73866, #d6336c);
+      color: white;
+      padding: 25px 0;
+      margin-bottom: 20px;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0 4px 15px rgba(199, 56, 102, 0.2);
     }
 
     h1 {
-      font-size: 2rem;
-      margin-top: 20px;
-      color: #d6336c;
+      font-family: 'Great Vibes', cursive;
+      font-size: 3rem;
+      margin: 0;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
     }
 
-    img {
-      width: 100%;
-      height: auto;
-      border-radius: 15px;
-      margin: 20px 0;
-      box-shadow: 0 4px 15px rgba(199, 56, 102, 0.2);
-    }
-
-    p {
+    .subtitle {
       font-size: 1.1rem;
-      margin: 20px 0;
-      line-height: 1.6;
+      margin-top: 5px;
+      opacity: 0.9;
     }
 
-    iframe {
+    .memory-section {
+      background: white;
+      border-radius: 20px;
+      padding: 25px;
+      margin: 25px auto;
+      max-width: 500px;
+      box-shadow: 0 4px 12px rgba(199, 56, 102, 0.1);
+    }
+
+    .photo-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 15px;
       margin: 20px 0;
+    }
+
+    .photo {
+      width: 100%;
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
+    }
+
+    .photo:hover {
+      transform: scale(1.03);
+    }
+
+    .love-letter {
+      background: #fff9fb;
+      border: 2px dashed #f9bfd5;
+      border-radius: 15px;
+      padding: 20px;
+      margin: 30px auto;
+      max-width: 500px;
+      text-align: left;
+      position: relative;
+    }
+
+    .love-letter:before {
+      content: "✉️";
+      position: absolute;
+      top: -15px;
+      left: -15px;
+      font-size: 1.5rem;
+      background: white;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .love-btn {
+      background: linear-gradient(to right, #c73866, #d6336c);
+      color: white;
       border: none;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(199, 56, 102, 0.2);
+      border-radius: 50px;
+      padding: 15px 30px;
+      font-size: 1.2rem;
+      margin: 20px 0;
+      cursor: pointer;
+      transition: all 0.3s;
+      box-shadow: 0 4px 15px rgba(199, 56, 102, 0.3);
+    }
+
+    .love-btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 6px 20px rgba(199, 56, 102, 0.4);
+    }
+
+    .hidden-message {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.5s ease-out;
+      margin: 30px 0;
+    }
+
+    .visible {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     .heart {
-      font-size: 3rem;
+      font-size: 2rem;
       animation: pulse 1.5s infinite;
       margin: 20px 0;
+      display: inline-block;
     }
 
     @keyframes pulse {
@@ -57,12 +136,13 @@
     }
 
     .back-btn {
-      background: #d6336c;
+      background: #c73866;
       color: white;
       border: none;
-      border-radius: 20px;
-      padding: 10px 20px;
-      margin: 20px 0;
+      border-radius: 25px;
+      padding: 12px 25px;
+      font-size: 1rem;
+      margin: 20px 0 40px;
       cursor: pointer;
       transition: background 0.3s;
     }
@@ -73,23 +153,73 @@
   </style>
 </head>
 <body>
-  <h1>Feliz Dia dos Namorados! 💖</h1>
+  <div class="header">
+    <h1>Nossas Memórias</h1>
+    <div class="subtitle">Cada momento com você é um tesouro 💖</div>
+  </div>
 
-  <!-- Player do Spotify -->
-  <iframe style="border-radius:12px"
-    src="https://open.spotify.com/embed/track/66KlcaDo2PlaFpumUHVG0W?utm_source=generator"
-    width="100%" height="152" frameBorder="0" allowfullscreen=""
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-    loading="lazy">
-  </iframe>
+  <div class="memory-section">
+    <h2>Nossa Música</h2>
+    <iframe style="border-radius:12px" 
+      src="https://open.spotify.com/embed/track/66KlcaDo2PlaFpumUHVG0W?utm_source=generator&theme=0" 
+      width="100%" height="152" frameBorder="0" 
+      allowfullscreen="" 
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+      loading="lazy">
+    </iframe>
+  </div>
 
-  <!-- Foto do casal -->
-  <img src="https://i.imgur.com/bK2xVdJ.jpg" alt="Nós dois" />
+  <div class="memory-section">
+    <h2>Nossos Momentos</h2>
+    <div class="photo-grid">
+      <img src="https://i.imgur.com/bK2xVdJ.jpg" alt="Nós dois" class="photo">
+      <img src="https://i.imgur.com/placeholder1.jpg" alt="Memória 1" class="photo">
+      <img src="https://i.imgur.com/placeholder2.jpg" alt="Memória 2" class="photo">
+      <img src="https://i.imgur.com/placeholder3.jpg" alt="Memória 3" class="photo">
+    </div>
+  </div>
 
-  <p>Que este dia seja tão especial quanto cada momento que passamos juntos. Você é a melhor coisa que já aconteceu na minha vida. Te amo! ❤️</p>
+  <div class="love-letter">
+    <h2>Para você, meu amor...</h2>
+    <p>Desde o primeiro dia em que nossos caminhos se cruzaram, minha vida ganhou novas cores. Cada riso, cada olhar, cada segundo ao seu lado é um presente que guardo com carinho no meu coração.</p>
+    <p>Você é a razão do meu sorriso todas as manhãs e minha paz todas as noites. Obrigado por ser exatamente quem você é.</p>
+    <p class="hidden-message" id="secretMessage">P.S.: Eu te amo mais do que todas as estrelas no céu. 💫</p>
+  </div>
 
+  <button class="love-btn" id="loveBtn">Clique aqui se me ama ❤️</button>
   <div class="heart">❤️</div>
 
   <button class="back-btn" onclick="window.location.href='escolha.html'">Voltar</button>
+
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+  <script>
+    // Revelar mensagem secreta ao rolar
+    window.addEventListener('scroll', () => {
+      const secretMessage = document.getElementById('secretMessage');
+      const messagePosition = secretMessage.getBoundingClientRect().top;
+      const screenPosition = window.innerHeight / 1.3;
+
+      if(messagePosition < screenPosition) {
+        secretMessage.classList.add('visible');
+      }
+    });
+
+    // Botão de amor com confetti
+    document.getElementById('loveBtn').addEventListener('click', () => {
+      confetti({
+        particleCount: 150,
+        spread: 70,
+        origin: { y: 0.6 },
+        colors: ['#ff0000', '#ff69b4', '#ff1493']
+      });
+      
+      // Mudar texto do botão temporariamente
+      const btn = document.getElementById('loveBtn');
+      btn.textContent = "Eu também te amo! 💕";
+      setTimeout(() => {
+        btn.textContent = "Clique aqui se me ama ❤️";
+      }, 2000);
+    });
+  </script>
 </body>
 </html>
