--- a/escolha.html
+++ b/escolha.html
@@ -11,29 +11,63 @@
       padding: 0;
       background: #ffe4ec;
       font-family: 'Montserrat', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .header {
+      background: linear-gradient(to right, #c73866, #d6336c);
+      color: white;
+      padding: 20px 0;
       text-align: center;
+      position: relative;
+    }
+
+    .back-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: white;
+      color: #c73866;
+      border: none;
+      border-radius: 25px;
+      padding: 8px 15px;
+      font-size: 0.9rem;
+      cursor: pointer;
+      transition: all 0.3s;
+      z-index: 10;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .back-btn:hover {
+      background: #f9bfd5;
+      transform: translateY(-2px);
     }
 
     h1 {
       font-family: 'Great Vibes', cursive;
       color: #c73866;
       font-size: 2.8rem;
-      margin-top: 30px;
+      margin: 20px 0 0;
     }
 
     .subtitle {
       font-size: 1rem;
       color: #8b1e3f;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
     .container {
+      flex: 1;
       display: flex;
       flex-direction: column;
       gap: 20px;
-      padding: 0 20px 40px;
-      max-width: 400px;
+      padding: 20px;
+      max-width: 500px;
       margin: 0 auto;
+      width: 100%;
+      box-sizing: border-box;
     }
 
     .card {
@@ -71,12 +105,23 @@
       color: #c73866;
       margin-top: 8px;
     }
+
+    .footer {
+      background: linear-gradient(to right, #c73866, #d6336c);
+      padding: 15px 0;
+      text-align: center;
+      color: white;
+      font-size: 0.8rem;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Menu do Nosso Amor</h1>
-  <div class="subtitle">♡ juntos para sempre ♡</div>
+  <div class="header">
+    <button class="back-btn" onclick="window.location.href='index.html'">Voltar</button>
+    <h1>Menu do Nosso Amor</h1>
+    <div class="subtitle">♡ juntos para sempre ♡</div>
+  </div>
 
   <div class="container">
     <div class="card" onclick="window.location.href='surpresa.html'">
@@ -99,6 +144,10 @@
       <div class="card-desc">Ouça a trilha sonora do nosso amor</div>
       <div class="heart">♡</div>
     </div>
+  </div>
+
+  <div class="footer">
+    Feito com ❤️ para você
   </div>
 
 </body>
