--- a/playlist.html
+++ b/playlist.html
@@ -8,31 +8,70 @@
   <style>
     body {
       margin: 0;
-      padding: 20px;
+      padding: 0;
       font-family: 'Montserrat', sans-serif;
       background-color: #ffe4ec;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .header {
+      background: linear-gradient(to right, #c73866, #d6336c);
+      color: white;
+      padding: 20px 0;
       text-align: center;
+      position: relative;
+    }
+
+    .back-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: white;
+      color: #c73866;
+      border: none;
+      border-radius: 25px;
+      padding: 8px 15px;
+      font-size: 0.9rem;
+      cursor: pointer;
+      transition: all 0.3s;
+      z-index: 10;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .back-btn:hover {
+      background: #f9bfd5;
+      transform: translateY(-2px);
     }
 
     h1 {
       font-family: 'Great Vibes', cursive;
       font-size: 2.8rem;
       color: #c73866;
-      margin-bottom: 10px;
+      margin: 20px 0 0;
     }
 
     .subtitle {
       font-size: 1rem;
       color: #8b1e3f;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
+    }
+
+    .content {
+      flex: 1;
+      padding: 20px;
+      max-width: 500px;
+      margin: 0 auto;
+      width: 100%;
+      box-sizing: border-box;
     }
 
     .playlist {
       display: flex;
       flex-direction: column;
       gap: 25px;
-      max-width: 500px;
-      margin: 0 auto;
+      margin: 20px 0;
     }
 
     iframe {
@@ -41,49 +80,48 @@
       box-shadow: 0 4px 15px rgba(199, 56, 102, 0.15);
     }
 
-    .back-btn {
-      background: #c73866;
+    .footer {
+      background: linear-gradient(to right, #c73866, #d6336c);
+      padding: 15px 0;
+      text-align: center;
       color: white;
-      border: none;
-      border-radius: 25px;
-      padding: 12px 25px;
-      font-size: 1rem;
-      margin: 40px auto 20px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .back-btn:hover {
-      background: #8b1e3f;
+      font-size: 0.8rem;
     }
   </style>
 </head>
 <body>
 
-  <h1>Playlist do Amor</h1>
-  <div class="subtitle">Músicas que marcaram nossa história 💖</div>
-
-  <div class="playlist">
-    <iframe style="width: 100%;" height="152"
-      src="https://open.spotify.com/embed/track/66KlcaDo2PlaFpumUHVG0W?utm_source=generator"
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy">
-    </iframe>
-
-    <iframe style="width: 100%;" height="152"
-      src="https://open.spotify.com/embed/track/1bJCIzuFCb8jPqmaCEQaHM?utm_source=generator"
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy">
-    </iframe>
-
-    <iframe style="width: 100%;" height="152"
-      src="https://open.spotify.com/embed/track/0in6Rc29qdyOkhKyYw4A84?utm_source=generator"
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-      loading="lazy">
-    </iframe>
+  <div class="header">
+    <button class="back-btn" onclick="window.location.href='escolha.html'">Voltar</button>
+    <h1>Playlist do Amor</h1>
+    <div class="subtitle">Músicas que marcaram nossa história 💖</div>
   </div>
 
-  <button class="back-btn" onclick="window.location.href='escolha.html'">Voltar</button>
+  <div class="content">
+    <div class="playlist">
+      <iframe style="width: 100%;" height="152"
+        src="https://open.spotify.com/embed/track/66KlcaDo2PlaFpumUHVG0W?utm_source=generator"
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy">
+      </iframe>
+
+      <iframe style="width: 100%;" height="152"
+        src="https://open.spotify.com/embed/track/1bJCIzuFCb8jPqmaCEQaHM?utm_source=generator"
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy">
+      </iframe>
+
+      <iframe style="width: 100%;" height="152"
+        src="https://open.spotify.com/embed/track/0in6Rc29qdyOkhKyYw4A84?utm_source=generator"
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy">
+      </iframe>
+    </div>
+  </div>
+
+  <div class="footer">
+    Feito com ❤️ para você
+  </div>
 
 </body>
 </html>
