--- a/contador.html
+++ b/contador.html
@@ -11,35 +11,61 @@
       padding: 0;
       font-family: 'Montserrat', sans-serif;
       background-color: #ffe4ec;
-      color: #333;
-      text-align: center;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
 
     .header {
       background: linear-gradient(to right, #c73866, #d6336c);
       color: white;
       padding: 20px 0;
-      margin-bottom: 20px;
-      border-radius: 0 0 15px 15px;
-      box-shadow: 0 4px 15px rgba(199, 56, 102, 0.2);
+      text-align: center;
+      position: relative;
+    }
+
+    .back-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: white;
+      color: #c73866;
+      border: none;
+      border-radius: 25px;
+      padding: 8px 15px;
+      font-size: 0.9rem;
+      cursor: pointer;
+      transition: all 0.3s;
+      z-index: 10;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .back-btn:hover {
+      background: #f9bfd5;
+      transform: translateY(-2px);
     }
 
     h1 {
       font-family: 'Great Vibes', cursive;
       font-size: 2.8rem;
       margin: 0;
+      color: white;
       text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     }
 
     .subtitle {
       font-size: 1rem;
       margin-top: 5px;
+      color: rgba(255, 255, 255, 0.9);
     }
 
-    .calendar-container {
+    .content {
+      flex: 1;
+      padding: 20px;
       max-width: 500px;
       margin: 0 auto;
-      padding: 0 20px;
+      width: 100%;
+      box-sizing: border-box;
     }
 
     .month {
@@ -178,31 +204,24 @@
       font-weight: 600;
     }
 
-    .back-btn {
-      background: #c73866;
+    .footer {
+      background: linear-gradient(to right, #c73866, #d6336c);
+      padding: 15px 0;
+      text-align: center;
       color: white;
-      border: none;
-      border-radius: 25px;
-      padding: 12px 25px;
-      font-size: 1rem;
-      margin: 20px 0 40px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .back-btn:hover {
-      background: #8b1e3f;
+      font-size: 0.8rem;
     }
   </style>
 </head>
 <body>
 
   <div class="header">
+    <button class="back-btn" onclick="window.location.href='escolha.html'">Voltar</button>
     <h1>Calendário do Amor</h1>
     <div class="subtitle">♡ Cada dia com você é um presente ♡</div>
   </div>
 
-  <div class="calendar-container">
+  <div class="content">
     <div class="month">
       <div class="month-header">
         <button class="month-nav" id="prevMonth">❮</button>
@@ -241,7 +260,9 @@
     </div>
   </div>
 
-  <button class="back-btn" onclick="window.location.href='escolha.html'">Voltar</button>
+  <div class="footer">
+    Feito com ❤️ para você
+  </div>
 
   <script>
     // Configurações
