--- a/index.html
+++ b/index.html
@@ -58,38 +58,36 @@
     .logo {
       font-size: 3rem;
       margin-top: 20px;
-      animation: pulse 1.5s infinite alternate;
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      100% { transform: scale(1.1); }
     }
 
     h1 {
-      color: #c73866;
+      color: white;
       font-size: 2rem;
       margin: 10px 0 5px;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
     }
 
     p {
-      color: #8b1e3f;
+      color: white;
       font-size: 1rem;
       margin-bottom: 15px;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     }
 
     .dica {
       font-style: italic;
-      color: #c73866;
+      color: white;
       margin-bottom: 20px;
       min-height: 20px;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     }
 
     .mensagem-carinhosa {
-      color: #d6336c;
+      color: white;
       font-weight: bold;
       margin: 10px 0;
       min-height: 20px;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     }
 
     .senha-digitada {
@@ -133,9 +131,10 @@
     }
 
     .erro {
-      color: red;
+      color: white;
       margin-top: 10px;
       display: none;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
     }
   </style>
 </head>
@@ -171,7 +170,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    const senhaCorreta = "1406"; // Substitua pela data do seu namoro (DDMM)
+    const senhaCorreta = "1810"; // Alterado para 18/10
     let senhaAtual = "";
     const senhaDigitada = document.getElementById('senhaDigitada');
     const erro = document.getElementById('erro');
@@ -259,3 +258,4 @@
   </script>
 </body>
 </html>
+[file content end]
