--- a/escolha.html
+++ b/escolha.html
@@ -22,12 +22,13 @@
       padding: 20px 0;
       text-align: center;
       position: relative;
+      padding-top: 40px;
     }
 
     .back-btn {
       position: absolute;
-      top: 20px;
-      right: 20px;
+      top: 10px;
+      left: 10px;
       background: white;
       color: #c73866;
       border: none;
@@ -47,15 +48,16 @@
 
     h1 {
       font-family: 'Great Vibes', cursive;
-      color: #c73866;
+      color: white;
       font-size: 2.8rem;
       margin: 20px 0 0;
     }
 
     .subtitle {
       font-size: 1rem;
-      color: #8b1e3f;
+      color: white;
       margin-bottom: 20px;
+      opacity: 0.9;
     }
 
     .container {
@@ -77,6 +79,7 @@
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       transition: transform 0.2s;
       cursor: pointer;
+      text-align: center;
     }
 
     .card:hover {
@@ -86,6 +89,8 @@
     .icon {
       font-size: 2.2rem;
       margin-bottom: 10px;
+      display: flex;
+      justify-content: center;
     }
 
     .card-title {
@@ -152,3 +157,4 @@
 
 </body>
 </html>
+[file content end]
