--- a/surpresa.html
+++ b/surpresa.html
@@ -22,12 +22,13 @@
       padding: 25px 0;
       text-align: center;
       position: relative;
+      padding-top: 40px;
     }
 
     .back-btn {
       position: absolute;
-      top: 20px;
-      right: 20px;
+      top: 10px;
+      left: 10px;
       background: white;
       color: #c73866;
       border: none;
@@ -50,12 +51,14 @@
       font-size: 3rem;
       margin: 0;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+      color: white;
     }
 
     .subtitle {
       font-size: 1.1rem;
       margin-top: 5px;
       opacity: 0.9;
+      color: white;
     }
 
     .content {
@@ -114,11 +117,6 @@
       transform: rotate(4deg);
       z-index: 2;
       margin-top: 10px;
-    }
-    .photo-collage img:nth-child(5) {
-      transform: rotate(-3deg);
-      z-index: 3;
-      margin-top: -15px;
     }
 
     .love-letter {
@@ -181,8 +179,10 @@
     .heart {
       font-size: 2rem;
       animation: pulse 1.5s infinite;
-      margin: 20px 0;
-      display: inline-block;
+      margin: 20px auto;
+      display: block;
+      text-align: center;
+      width: fit-content;
     }
 
     @keyframes pulse {
@@ -225,7 +225,6 @@
         <img src="https://i.imgur.com/g8kfu1M.jpeg" alt="Nossa foto 2">
         <img src="https://i.imgur.com/J8MHKle.jpeg" alt="Nossa foto 3">
         <img src="https://i.imgur.com/EAeONS3.jpeg" alt="Nossa foto 4">
-        <img src="https://i.imgur.com/3IAVGrl.jpeg" alt="Nossa foto 5">
       </div>
     </div>
 
@@ -276,3 +275,4 @@
   </script>
 </body>
 </html>
+[file content end]
