--- a/surpresa.html
+++ b/surpresa.html
@@ -230,8 +230,16 @@
 
     <div class="love-letter">
       <h2>Para você, meu amor...</h2>
-      <p>Desde o primeiro dia em que nossos caminhos se cruzaram, minha vida ganhou novas cores. Cada riso, cada olhar, cada segundo ao seu lado é um presente que guardo com carinho no meu coração.</p>
-      <p>Você é a razão do meu sorriso todas as manhãs e minha paz todas as noites. Obrigado por ser exatamente quem você é.</p>
+      <p>Oi, amor,</p>
+      <p>Desde o dia em que a gente se conheceu, minha vida mudou de um jeito que eu nem sei explicar. Parece que tudo ficou mais colorido, mais leve... mais feliz. Você chegou de mansinho, e sem perceber, virou tudo. Virou casa, virou paz, virou motivo pra sorrir todo dia.
+
+Cada risada sua, cada olhar, cada momento ao seu lado é um presente que eu guardo com todo carinho. Às vezes eu paro e penso em como a vida foi generosa comigo por ter me dado você. De verdade.
+
+Você é quem faz meus dias começarem com vontade e terminarem em paz. É o abraço que acalma, o apoio nas horas difíceis, a companhia que eu sempre quis. E eu sou tão, mas tão grato por te ter.
+
+Obrigado por ser você. Por ser tão incrível, tão de verdade. Por me fazer sentir amado só com um “oi” ou um sorriso. Por me fazer querer ser melhor todos os dias.
+
+Eu só queria que você soubesse disso: eu te amo, e vou estar aqui sempre, pra tudo. Pra rir com você, pra dividir os silêncios, pra sonhar junto e enfrentar qualquer coisa — de mãos dadas.</p>
       <p class="hidden-message" id="secretMessage">P.S.: Eu te amo mais do que todas as estrelas no céu. 💫</p>
     </div>
 
@@ -275,4 +283,3 @@
   </script>
 </body>
 </html>
-[file content end]
