--- a/playlist.html
+++ b/playlist.html
@@ -48,13 +48,14 @@
     h1 {
       font-family: 'Great Vibes', cursive;
       font-size: 2.8rem;
-      color: #c73866;
+      color: white;
       margin: 20px 0 0;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     }
 
     .subtitle {
       font-size: 1rem;
-      color: #8b1e3f;
+      color: rgba(255, 255, 255, 0.9);
       margin-bottom: 20px;
     }
 
