--- a/surpresa.html
+++ b/surpresa.html
@@ -240,7 +240,7 @@ Você é quem faz meus dias começarem com vontade e terminarem em paz. É o abr
 Obrigado por ser você. Por ser tão incrível, tão de verdade. Por me fazer sentir amado só com um “oi” ou um sorriso. Por me fazer querer ser melhor todos os dias.
 
 Eu só queria que você soubesse disso: eu te amo, e vou estar aqui sempre, pra tudo. Pra rir com você, pra dividir os silêncios, pra sonhar junto e enfrentar qualquer coisa — de mãos dadas.</p>
-      <p class="hidden-message" id="secretMessage">P.S.: Eu te amo mais do que todas as estrelas no céu. 💫</p>
+      <p class="hidden-message" id="secretMessage"> 💫</p>
     </div>
 
     <button class="love-btn" id="loveBtn">Clique aqui se me ama ❤️</button>
