--- a/escolha.html
+++ b/escolha.html
@@ -3,34 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Menu para páginas especiais do nosso amor.">
   <title>Menu do Nosso Amor</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --rosa-principal: #c73866;
+      --rosa-secundario: #d6336c;
+      --rosa-claro: #f9bfd5;
+      --fundo: #ffe4ec;
+      --texto-escuro: #8b1e3f;
+      --branco: #fff;
+      --efeito-hover: 0 8px 32px 0 rgba(199,56,102,0.12), 0 1.5px 8px 0 rgba(214,51,108,0.09);
+    }
     html, body {
       margin: 0;
       padding: 0;
-      background: #ffe4ec;
+      background: var(--fundo);
       font-family: 'Montserrat', sans-serif;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
     }
-
-    .header {
-      background: linear-gradient(to right, #c73866, #d6336c);
+    header.header {
+      background: linear-gradient(to right, var(--rosa-principal), var(--rosa-secundario));
       color: white;
       padding: 20px 0;
       text-align: center;
       position: relative;
       padding-top: 40px;
     }
-
     .back-btn {
       position: absolute;
-      top: 10px;
-      left: 10px;
+      top: 20px;
+      right: 20px;
       background: white;
-      color: #c73866;
+      color: var(--rosa-principal);
       border: none;
       border-radius: 25px;
       padding: 8px 15px;
@@ -40,27 +48,23 @@
       z-index: 10;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
-
     .back-btn:hover {
-      background: #f9bfd5;
+      background: var(--rosa-claro);
       transform: translateY(-2px);
     }
-
     h1 {
       font-family: 'Great Vibes', cursive;
       color: white;
       font-size: 2.8rem;
       margin: 20px 0 0;
     }
-
     .subtitle {
       font-size: 1rem;
       color: white;
       margin-bottom: 20px;
       opacity: 0.9;
     }
-
-    .container {
+    main.container {
       flex: 1;
       display: flex;
       flex-direction: column;
@@ -71,89 +75,86 @@
       width: 100%;
       box-sizing: border-box;
     }
-
     .card {
-      background: #fff;
+      background: var(--branco);
       border-radius: 20px;
       padding: 25px 20px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      transition: transform 0.2s;
+      transition: box-shadow 0.35s, transform 0.35s, background 0.25s;
       cursor: pointer;
       text-align: center;
     }
-
-    .card:hover {
-      transform: translateY(-5px);
+    .card:hover, .card:focus {
+      box-shadow: var(--efeito-hover);
+      background: #fff0f6;
+      transform: translateY(-6px) scale(1.03);
+      outline: none;
     }
-
     .icon {
       font-size: 2.2rem;
       margin-bottom: 10px;
       display: flex;
       justify-content: center;
     }
-
     .card-title {
       font-weight: 600;
-      color: #c73866;
+      color: var(--rosa-principal);
       font-size: 1.2rem;
     }
-
     .card-desc {
       font-size: 0.9rem;
-      color: #8b1e3f;
+      color: var(--texto-escuro);
       margin-top: 5px;
     }
-
     .heart {
       font-size: 1.2rem;
-      color: #c73866;
+      color: var(--rosa-principal);
       margin-top: 8px;
     }
-
-    .footer {
-      background: linear-gradient(to right, #c73866, #d6336c);
+    footer.footer {
+      background: linear-gradient(to right, var(--rosa-principal), var(--rosa-secundario));
       padding: 15px 0;
       text-align: center;
       color: white;
       font-size: 0.8rem;
     }
+    @media (max-width: 600px) {
+      h1 { font-size: 2rem; }
+      main.container { padding: 8px;}
+      .card { padding: 15px 7px;}
+      .card-title { font-size: 1rem;}
+    }
   </style>
 </head>
 <body>
-
-  <div class="header">
-    <button class="back-btn" onclick="window.location.href='index.html'">Voltar</button>
+  <header class="header">
+    <button class="back-btn" onclick="window.location.href='index.html'" aria-label="Voltar para início">Voltar</button>
     <h1>Menu do Nosso Amor</h1>
     <div class="subtitle">♡ juntos para sempre ♡</div>
-  </div>
+  </header>
 
-  <div class="container">
-    <div class="card" onclick="window.location.href='surpresa.html'">
+  <main class="container" role="main">
+    <section class="card" tabindex="0" onclick="window.location.href='surpresa.html'" aria-label="Ir para Nossas Memórias">
       <div class="icon">📷</div>
       <div class="card-title">Nossas Memórias</div>
       <div class="card-desc">Momentos preciosos com você</div>
       <div class="heart">♡</div>
-    </div>
-
-    <div class="card" onclick="window.location.href='contador.html'">
+    </section>
+    <section class="card" tabindex="0" onclick="window.location.href='contador.html'" aria-label="Ir para Calendário do Amor">
       <div class="icon">📅</div>
       <div class="card-title">Calendário do Amor</div>
       <div class="card-desc">Contador de tempo do nosso amor</div>
       <div class="heart">♡</div>
-    </div>
-
-    <div class="card" onclick="window.location.href='playlist.html'">
+    </section>
+    <section class="card" tabindex="0" onclick="window.location.href='playlist.html'" aria-label="Ir para Playlist do Amor">
       <div class="icon">🎵</div>
       <div class="card-title">Playlist do Amor</div>
       <div class="card-desc">Ouça a trilha sonora do nosso amor</div>
       <div class="heart">♡</div>
-    </div>
-  </div>
-
-  <div class="footer">
+    </section>
+  </main>
+  <footer class="footer">
     Feito com ❤️ para você
-  </div>
-
+  </footer>
 </body>
 </html>
