--- a/escolha.html
+++ b/escolha.html
@@ -3,42 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Menu para páginas especiais do nosso amor.">
   <title>Menu do Nosso Amor</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --rosa-principal: #c73866;
-      --rosa-secundario: #d6336c;
-      --rosa-claro: #f9bfd5;
-      --fundo: #ffe4ec;
-      --texto-escuro: #8b1e3f;
-      --branco: #fff;
-      --efeito-hover: 0 8px 32px 0 rgba(199,56,102,0.12), 0 1.5px 8px 0 rgba(214,51,108,0.09);
-    }
     html, body {
       margin: 0;
       padding: 0;
-      background: var(--fundo);
+      background: #ffe4ec;
       font-family: 'Montserrat', sans-serif;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
     }
-    header.header {
-      background: linear-gradient(to right, var(--rosa-principal), var(--rosa-secundario));
+
+    .header {
+      background: linear-gradient(to right, #c73866, #d6336c);
       color: white;
       padding: 20px 0;
       text-align: center;
       position: relative;
       padding-top: 40px;
     }
+
     .back-btn {
       position: absolute;
-      top: 20px;
-      right: 20px;
+      top: 10px;
+      left: 10px;
       background: white;
-      color: var(--rosa-principal);
+      color: #c73866;
       border: none;
       border-radius: 25px;
       padding: 8px 15px;
@@ -48,23 +40,27 @@
       z-index: 10;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
+
     .back-btn:hover {
-      background: var(--rosa-claro);
+      background: #f9bfd5;
       transform: translateY(-2px);
     }
+
     h1 {
       font-family: 'Great Vibes', cursive;
       color: white;
       font-size: 2.8rem;
       margin: 20px 0 0;
     }
+
     .subtitle {
       font-size: 1rem;
       color: white;
       margin-bottom: 20px;
       opacity: 0.9;
     }
-    main.container {
+
+    .container {
       flex: 1;
       display: flex;
       flex-direction: column;
@@ -75,86 +71,89 @@
       width: 100%;
       box-sizing: border-box;
     }
+
     .card {
-      background: var(--branco);
+      background: #fff;
       border-radius: 20px;
       padding: 25px 20px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      transition: box-shadow 0.35s, transform 0.35s, background 0.25s;
+      transition: transform 0.2s;
       cursor: pointer;
       text-align: center;
     }
-    .card:hover, .card:focus {
-      box-shadow: var(--efeito-hover);
-      background: #fff0f6;
-      transform: translateY(-6px) scale(1.03);
-      outline: none;
+
+    .card:hover {
+      transform: translateY(-5px);
     }
+
     .icon {
       font-size: 2.2rem;
       margin-bottom: 10px;
       display: flex;
       justify-content: center;
     }
+
     .card-title {
       font-weight: 600;
-      color: var(--rosa-principal);
+      color: #c73866;
       font-size: 1.2rem;
     }
+
     .card-desc {
       font-size: 0.9rem;
-      color: var(--texto-escuro);
+      color: #8b1e3f;
       margin-top: 5px;
     }
+
     .heart {
       font-size: 1.2rem;
-      color: var(--rosa-principal);
+      color: #c73866;
       margin-top: 8px;
     }
-    footer.footer {
-      background: linear-gradient(to right, var(--rosa-principal), var(--rosa-secundario));
+
+    .footer {
+      background: linear-gradient(to right, #c73866, #d6336c);
       padding: 15px 0;
       text-align: center;
       color: white;
       font-size: 0.8rem;
     }
-    @media (max-width: 600px) {
-      h1 { font-size: 2rem; }
-      main.container { padding: 8px;}
-      .card { padding: 15px 7px;}
-      .card-title { font-size: 1rem;}
-    }
   </style>
 </head>
 <body>
-  <header class="header">
-    <button class="back-btn" onclick="window.location.href='index.html'" aria-label="Voltar para início">Voltar</button>
+
+  <div class="header">
+    <button class="back-btn" onclick="window.location.href='index.html'">Voltar</button>
     <h1>Menu do Nosso Amor</h1>
     <div class="subtitle">♡ juntos para sempre ♡</div>
-  </header>
+  </div>
 
-  <main class="container" role="main">
-    <section class="card" tabindex="0" onclick="window.location.href='surpresa.html'" aria-label="Ir para Nossas Memórias">
+  <div class="container">
+    <div class="card" onclick="window.location.href='surpresa.html'">
       <div class="icon">📷</div>
       <div class="card-title">Nossas Memórias</div>
       <div class="card-desc">Momentos preciosos com você</div>
       <div class="heart">♡</div>
-    </section>
-    <section class="card" tabindex="0" onclick="window.location.href='contador.html'" aria-label="Ir para Calendário do Amor">
+    </div>
+
+    <div class="card" onclick="window.location.href='contador.html'">
       <div class="icon">📅</div>
       <div class="card-title">Calendário do Amor</div>
       <div class="card-desc">Contador de tempo do nosso amor</div>
       <div class="heart">♡</div>
-    </section>
-    <section class="card" tabindex="0" onclick="window.location.href='playlist.html'" aria-label="Ir para Playlist do Amor">
+    </div>
+
+    <div class="card" onclick="window.location.href='playlist.html'">
       <div class="icon">🎵</div>
       <div class="card-title">Playlist do Amor</div>
       <div class="card-desc">Ouça a trilha sonora do nosso amor</div>
       <div class="heart">♡</div>
-    </section>
-  </main>
-  <footer class="footer">
+    </div>
+  </div>
+
+  <div class="footer">
     Feito com ❤️ para você
-  </footer>
+  </div>
+
 </body>
 </html>
